<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mupceet.activitytaskdemo.StandardActivity"
    android:orientation="vertical">


    <Button
        android:id="@+id/btn_to_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/main_activity" />
    <Button
        android:id="@+id/btn_to_single_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/single_top_activity" />
    <Button
        android:id="@+id/btn_to_standard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/standard_activity" />
</LinearLayout>
